# apb86_A1

./: .gitignore  README.md  draft.ipynb  pyproject.toml
data/: best_optimized_model.pt
docs/: PACKAGE_DOCUMENTATION.md
src/apb86_a1/: __init__.py  cli.py  emulator.py  io.py  preprocessing.py
src/apb86_a1.egg-info/: PKG-INFO  SOURCES.txt
src/lba/: __main__.py  io.py  mcmc.py  preprocessing.py
src/lba.egg-info/: entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_emulator.py  test_io.py  test_preprocessing.py
