[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apb86-a1"
version = "0.1.0"
description = "Library utilities for the A1 radio astronomy coursework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "optuna>=3.0",
    "scikit-learn>=1.3",
    "torch>=2.0",
]

[project.scripts]
apb86-a1 = "apb86_a1.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]